# futurenhs-platform

./: .editorconfig  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy-branch.sh  deploy-master.sh  event-models-branch.yaml  frontend-branch.yaml  frontend-master.yaml  hello-world-branch.yaml  hello-world-master.yaml  infrastructure-branch.yaml  infrastructure-master.yaml  linting.yaml  workspace-service-branch.yaml  workspace-service-master.yaml
docs/: FutureNHS Changle Release Process  README.md  aad-b2c.md  change-release-process.drawio  ci-setup.md  governance.md  maintenance.md  working-with-sealed-secrets.md
docs/architecture/: README.md  high-level.drawio
docs/data-flow/: README.md  event-data-flow.drawio
docs/data-maping/: README.md
docs/data-mapping/: README.md
docs/governance/: README.md
docs/tech-stack/: README.md  docker-kubernetes.md  why-rust.md
docs/testing/: test-approach.md
event-models/: README.md  generate-rust.js  generate-typescript.js  package.json  schema.json
event-models/rust/: Cargo.toml
event-models/rust/fnhs_event_models_generate/: Cargo.toml
event-models/rust/fnhs_event_models_generate/src/: lib.rs  schema.rs
event-models/rust/src/: client.rs  custom.rs  lib.rs  main.rs  models.rs  using_data_version.rs
event-models/rust/src/models/: generated.rs  mod.rs
event-models/typescript/: generate.js  generate.ts  index.ts  package.json  schema.ts  tsconfig.json
frontend/: .babelrc  .dockerignore  .env.development  .eslintrc.json  .gitignore  .npmrc  .prettierignore  Dockerfile  Makefile  README.md  codegen.yaml  codegen.yml  cypress.Dockerfile  cypress.json  docker-entrypoint.sh  graphql.schema.json  jest.config.js  jestFileTransformer.js  next.config.js  noop-passport-strategy.js  package.json  schema.graphql  server.js  tracing.js  tsconfig.json
frontend/__tests__/: workspaces-directory.test.tsx
frontend/components/: layout.tsx  next-applicationinsights.ts
frontend/database/: migrate-db.sh  table-schema.sql
frontend/lib/: auth.ts  events.test.ts  (+8 more)
hello-world/: Cargo.toml  Dockerfile  Makefile  README.md
hello-world/manifests/base/: deployment.yaml  kustomization.yaml  service.yaml
hello-world/manifests/dev-jan/: deployment.yaml
hello-world/manifests/dev-template/: deployment.yaml  favourite-cuisine-sealed.yaml  kustomization.yaml  mynewsealedsecret.yaml
hello-world/manifests/production/: deployment.yaml  favourite-cuisine-sealed.yaml  kustomization.yaml
hello-world/manifests/sealed-secrets/production/: mysealedfoodsecret.yaml
hello-world/src/: lib.rs  main.rs
hello-world/tests/: hello_world.rs
infrastructure/: README.md  dev-overlay-variables.json
test/: .env.example  .gitignore  README.md  browserstack.json  browserstack.json.example  cypress-bs-local.json  cypress-local.json  cypress-prod.json  cypress.json  package-lock.json  package.json  tsconfig.json
workspace/: Cargo.toml  Dockerfile  Makefile  README.md
workspace-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  graphql-schema.json  sqlx-data.json
workspace-service/manifests/base/: deployment.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  service.yaml
workspace-service/manifests/dev-template/: deployment.yaml  kustomization.yaml
workspace-service/manifests/production/: deployment.yaml
workspace-service/migrations/: 20200810160701_create-workspace-table.sql  20200901103018_add-long_description.sql  20200908102451_rename-workspaces.sql  20200908102452_create-folders.sql  20200909100019_rename-to-description.sql  20201005095421_files.sql  20201009093453_create_user_table.sql  20201014134400_create_admin_user.sql  20201021092350_create-file-version-table.sql  20201021141602_alter_files.sql  20201022112201_file-indexes.sql  20201022135333_groups.sql  20201022144035_user-email.sql  20201022150109_insert-users.sql  20201028162229_insert-workspaces.sql  20201102110421_rename-group-to-teamteam.sql  20201106130906_add_access_to_folders.sql
workspace-service/scripts/: _context.sh  _mime_type.sh  create-default-test-folders.sh  create-file-if-needed.sh  create-folder-if-needed.sh  create-workspace-if-needed.sh
workspace-service/scripts/files/: Coronavirus Numbers.csv  Encryption Keys.txt  Motivational Speech.pptx  River.mov  Trust List.docx
workspace-service/sql/: create.sql  delete.sql  find_all.sql  find_by_id.sql  update.sql
workspace-service/sql/file_versions/: create.sql  find_by_file_id.sql
workspace-service/sql/files/: create.sql  delete.sql  find_by_folder.sql  find_by_id.sql  update_latest_version.sql
workspace-service/sql/folders/: create.sql  delete.sql  find_by_id.sql  find_by_workspace.sql  update.sql
workspace-service/sql/groups/: create.sql  delete.sql  find_by_id.sql  group_members.sql  update.sql
workspace-service/sql/teams/: add_member.sql  create.sql  is_member.sql  members.sql  members_difference.sql  remove_member.sql
workspace-service/sql/users/: get_or_create.sql  update.sql
workspace-service/sql/workspaces/: create.sql  delete.sql  find_all.sql  find_by_id.sql  update.sql
workspace-service/src/: config.rs  db.rs  graphql.rs  lib.rs  main.rs
workspace-service/src/azure/: blob.rs  mod.rs  sas.rs
workspace-service/src/db/: file_versions.rs  files.rs  folders.rs  groups.rs  mod.rs  teams.rs  users.rs  workspaces.rs
workspace-service/src/events/: mod.rs
workspace-service/src/graphql/: file_download_urls.rs  file_upload_urls.rs  file_uploads.rs  file_versions.rs  files.rs  folders.rs  mod.rs  schema.rs  test_mocks.rs  tracing_ext.rs  users.rs  validation.rs  workspaces.rs
workspace-service/src/sas/: mod.rs  upload.rs
workspace-service/tests/: graphql_schema_file.rs
workspace/manifests/base/: deployment.yaml
workspace/manifests/dev-template/: deployment.yaml
workspace/manifests/production/: deployment.yaml
workspace/sql/: create.sql  update.sql
workspace/src/: db.rs  graphql.rs  lib.rs  main.rs
(+406 files in other folders)
