[package]
name = "hello-world"
version = "0.1.0"
authors = ["stuart.harris@red-badger.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
opentelemetry-application-insights = "0.3.0"
opentelemetry = "0.7.0"
tide = "0.13.0"
tokio = { version = "0.2.22", features = ["macros", "time", "rt-core", "stream"] }
tracing = { version = "0.1.19", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.6.0"
tracing-subscriber = "0.2.11"

[dev-dependencies]
http-types = "2.4.0"
surf = "1.0.3"
