[package]
name = "hello-world"
version = "0.1.0"
authors = ["stuart.harris@red-badger.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.3", features = ["attributes", "unstable"] }
opentelemetry-application-insights = "0.4.0"
opentelemetry = "0.8.0"
tide = "0.13.0"
tracing = { version = "0.1.19", features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.7.0"
tracing-subscriber = "0.2.12"

[dev-dependencies]
http-types = "2.4.0"
surf = "1.0.3"
