[package]
edition = "2018"
name = "workspace_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
async-compat = "0.1.5"
async-graphql = "1.18.2"
async-graphql-tide = "1.18.1"
async-std = {version = "1.6.5", features = ["attributes", "unstable"]}
azure_sdk_core = "0.43.7"
azure_sdk_storage_blob = "0.45.3"
azure_sdk_storage_core = "0.44.4"
chrono = "0.4.19"
fnhs-event-models = {path = "../event-models/rust"}
http-types = "2.6.0"
opentelemetry = "0.8.0"
opentelemetry-application-insights = "0.4.0"
serde_json = "1.0.58"
structopt = "0.3.20"
tide = "0.13.0"
tracing = {version = "0.1.21", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.7.0"
tracing-subscriber = "0.2.13"
url = "2.1.1"
uuid = "0.8.1"

[dependencies.sqlx]
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "offline",
  "postgres",
  "runtime-async-std",
  "tls",
  "uuid",
]
git = "https://github.com/frigus02/sqlx"
rev = "106a6a83952bfc0e3316d54f99d865e469dcc15a"

[dev_dependencies]
percent-encoding = "2.1.0"
