[package]
edition = "2018"
name = "workspace_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
async-compat = "0.1.5"
async-graphql = "=2.0.8"
async-graphql-tide = "=2.0.8"
async-std = {version = "1.7.0", features = ["attributes", "unstable"]}
azure_sdk_core = "0.43.7"
azure_sdk_storage_blob = "0.45.3"
azure_sdk_storage_core = "0.44.4"
async-trait = "0.1.41"
chrono = "0.4.19"
fnhs-event-models = {path = "../event-models/rust"}
http-types = "2.7.0"
lazy_static = "1.4.0"
mime-db = "1.1.0"
opentelemetry = "0.8.0"
opentelemetry-application-insights = "0.4.0"
regex = "1.4.2"
serde_json = "1.0.59"
structopt = "0.3.20"
tide = "0.14.0"
tracing = {version = "0.1.21", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-opentelemetry = "0.8.0"
tracing-subscriber = "0.2.14"
url = "2.1.1"
uuid = "0.8.1"
validator = {version = "0.11.0", features = ["derive"]}

[dependencies.sqlx]
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "offline",
  "postgres",
  "runtime-async-std",
  "tls",
  "uuid",
]
git = "https://github.com/launchbadge/sqlx"
rev = "144dcceb445e804b16258d0dd9e580d6a484a01e"

[dev_dependencies]
percent-encoding = "2.1.0"
test-case = "1.0.0"
