[package]
name = "fnhs_event_models"
version = "0.1.0"
authors = ["Jan Kuehle <jan.kuehle@red-badger.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
fnhs_event_models_generate = { path = "./fnhs_event_models_generate" }
schemafy = "0.5.1"
serde = "1.0.115"
serde_json = "1.0.57"
