[package]
name = "fnhs-event-models"
version = "0.1.0"
authors = ["Jan Kuehle <jan.kuehle@red-badger.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.8"
schemafy = "0.5"
serde = "1"
serde_json = "1"
surf = "1"
uuid = { version = "0.8", features = ["v4"] }
