[package]
name = "fnhs-event-models"
version = "0.1.0"
authors = ["Jan Kuehle <jan.kuehle@red-badger.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
schemafy = "0.5"
serde = "1"
serde_json = "1"
surf = "1"
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["v4"] }
