[package]
name = "fnhs_event_models_generate"
version = "0.1.0"
authors = ["Jan Kuehle <jan.kuehle@red-badger.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
schemafy = "0.5.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
syn = "1.0.38"
proc-macro2 = "1.0.19"
Inflector = "0.11.4"
quote = "1.0.7"
